整理 JVM 相关内容